test/trivial/deitz/test_use_before_def3.chpl
function foo() {
  {
    writeln(x);
  }
  var x : integer = 12;
}
foo();
